--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     
 <head>
     <title>March 18, 2025</title>
-
+    
 </head>
 
 <body>
     <p>This is an index page.</p>
+    <p>Today is the <i>first class</i> after spring break.<br> Everyone is <b>excited</b> to get back to work.</p>
+
+    <ul>
+        <li>applachain</li>
+        <li>pacific crest</li>
+        <li>continental divide</li>
+    </ul>
+
+    <ol>
+        <li>applachian</li>
+        <li>pacific crest</li>
+        <li>continental divide</li>
+    </ol>
+
+    <img src="graphics/mountain.png">
+
+    <p><a href="https://www.nytimes.com/" target="_blank"> Read it and weep.</a></p>
 
 </body>
 
