--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     
 <head>
     <title>March 18, 2025</title>
+    <link rel="stylesheet" type="text/css" href="default.css" >
     
 </head>
 
+
+<div id="main">
 <body>
     <p>This is an index page.</p>
     <p>Today is the <i>first class</i> after spring break.<br> Everyone is <b>excited</b> to get back to work.</p>
@@ -16,7 +19,7 @@
         <li>pacific crest</li>
         <li>continental divide</li>
     </ul>
-
+<hr>
     <ol>
         <li>applachian</li>
         <li>pacific crest</li>
@@ -26,7 +29,16 @@
     <img src="graphics/mountain.png">
 
     <p><a href="https://www.nytimes.com/" target="_blank"> Read it and weep.</a></p>
+    <p><a href="sample.html" target="_blank"> sample page</a></p>
+
+<div id="size">
+
+    <h1>this is a header 1</h1>
+    <h5>this is a header 5</h5>
+
+    </div>
 
 </body>
+</div>
 
 </html>
