--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p><a href="https://www.nytimes.com/" target="_blank"> Read it and weep.</a></p>
     <p><a href="sample.html" target="_blank"> sample page</a></p>
-    <p><a href="file:///Users/emilybennett/Downloads/github/Website7C.html" target="_blank"> Web Page</a></p>
+    <p><a href="Website7C.html" target="_blank"> Web Page</a></p>
 
 <div id="size">
 
