--- a/Website7C.html
+++ b/Website7C.html
@@ -18,16 +18,16 @@
 
 <div id="links">
     <div id="link1">
-        <p><a href="file:///Users/emilybennett/Downloads/github/Website7C.html" target="_blank"> Home</a></p>
+        <p><a href="https://www.google.com/" target="_blank"> Home</a></p>
         </div>
 <div id="link2">
-        <p><a href="file:///Users/emilybennett/Downloads/github/Website7C.html" target="_blank"> About</a></p>
+        <p><a href="https://www.google.com/" target="_blank"> About</a></p>
         </div>
         <div id="link3">
-        <p><a href="file:///Users/emilybennett/Downloads/github/Website7C.html" target="_blank"> Locations</a></p>
+        <p><a href="https://www.google.com/" target="_blank"> Locations</a></p>
         </div>
         <div id="link4">
-        <p><a href="file:///Users/emilybennett/Downloads/github/Website7C.html" target="_blank"> Contact</a></p>
+        <p><a href="https://www.google.com/" target="_blank"> Contact</a></p>
         </div>
     </div>
     
@@ -71,11 +71,18 @@
 </div>
 
   <div id="paragraph2">
-<p>Equine therapy has proven to show high success rates within all patients who participate in some form of theraputic riding. Patiencts have an over 80% success rate of reaching therapeutic goals. Patients are also 94% more likely to seek out mental help with animal assisted therapy than one on one and there is a 0% drop out rate in many of these programs. After 3 weeks, 66.7% of patients had lower PTSD scores, and 87.5% after 6 weeks. </p>
+    <h2>80% Success Rate</h2>
+    <h2>94% Prefer Animal Assisted Therapy</h2>
+    <h2>0% Drop Out Rate</h2>
+    <h2>Lower PTSD Scores</h2>
+</div>
+<div id="paragraph4">
+    <h3>66.7% after 3 weeks</h3>
+    <h3>87.5% after 6 weeks</h3>
 </div>
 
 <div id="paragraph3">
-    <p> <b> Locations </b></p>
+    <h3> Locations </h3>
     <p>Find a location near you to get started today!</p>
     <p>Locations near the Chapel Hill Area</p>
     <ul>
