--- a/Website7C.html
+++ b/Website7C.html
@@ -35,6 +35,9 @@
     <p>Equine therapy is designed to allow the patient to connect with the horse through riding, grooming, or proximity. It has been shown to help many people with disabilities, social issues, and improve mental health.</p>
 </div>
 
+<div id="paragraph5">
+    <h1>Sign Up Today!</h1>
+</div>
 
 <div id="list1">
 <p> <b>Helps People Build:</b></p>
