--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <img src="graphics/mountain.png">
 
-    <p><a href="https://www.nytimes.com/" target="_blank"> Read it and weep.</a></p>       <p><a href="Grocery.html" target="_blank"> Twine Project</a></p>
+    <p><a href="https://www.nytimes.com/" target="_blank"> Read it and weep.</a></p>       <p><a href="Grocery2.html" target="_blank"> Twine Project</a></p>
     <p><a href="sample.html" target="_blank"> sample page</a></p>
     <p><a href="Website7C.html" target="_blank"> Web Page</a></p>
 
